[gd_scene load_steps=4 format=2]

[ext_resource path="res://NotoSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://pointer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
margin_bottom = 2.0
rect_min_size = Vector2( 12, 12 )
mouse_filter = 1
custom_fonts/normal_font = SubResource( 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="Label" to="." method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Label" to="." method="_on_Label_mouse_exited"]
